# PC2

./: CMakeLists.txt  README.md  accumulator.h  cppcheck.cpp  get_equivalent_pairs.h  global.h  p1.cpp  p1.h  p2.cpp  p2.h  p3.cpp  p3.h  remove_comments.cpp  remove_comments.h  remove_duplicates.h  run.sh  test_1_1.in  test_1_2.cpp  test_1_2.in  test_2_1.in  test_2_2.cpp  test_2_2.in  test_3_1.in  test_3_2.cpp  test_3_2.in
